# tinkoff_investments

./: Cargo.toml  README.md  build.rs
.github/workflows/: crates.yml  devskim-analysis.yml  prisma-analysis.yml  tests.yml
src/: api.rs  lib.rs  schema.rs  schemas.rs  services.rs
src/api/: sandbox.rs
src/schema/: account.rs  candle.rs  currency.rs  error.rs  market.rs  operation.rs  order.rs  portfolio.rs  sandbox.rs  streaming.rs
src/schemas/: account.rs  candle.rs  currency.rs  error.rs  market.rs  operation.rs  order.rs  portfolio.rs  sandbox.rs  streaming.rs
src/services/: market.rs  operations.rs  orders.rs  portfolio.rs  sandbox.rs  user.rs  ws.rs
tinkoff_investments_requests/: Cargo.toml
tinkoff_investments_requests/src/: accounts.rs  lib.rs  market.rs  operations.rs  orders.rs  portfolio.rs  sandbox.rs
tinkoff_investments_requests/tests/: requests.rs
tinkoff_investments_schemas/: Cargo.toml
tinkoff_investments_schemas/src/: account.rs  candle.rs  currency.rs  lib.rs  market.rs  operation.rs  order.rs  portfolio.rs  sandbox.rs  streaming.rs
