[package]
name = "tinkoff_investments"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bytes = "1.0.1"
serde = { version="1.0.126", features = ["derive"] }
serde_json = "1.0.64"
hyper = {version="0.14.9", features=["full"]}
smallvec = "1.6.1"
hyper-tls = { version = "0.5" }
chrono = "0.4"
#tokio = { version = "0.2", features = ["full"] }
async-std = { version = "1", features = ["attributes", "tokio1"] }