[package]
name        = "tinkoff_investments"
description = "Библиотека с открытым исходным кодом для разработки торговых роботов на платформе \"Тинькофф инвестиции\". Основана на Тинькофф Инвестиции Open API."
authors     = ["Egor Kuznetsov"]
repository  = "https://github.com/E-AK/tinkoff_investments"
keywords    = ["tinkoff", "open api", "api"]
include     = ["LICENSE-*", "README.md"]
license     = "LGPL-2.1"
version     = "0.1.0"
edition     = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bytes       = "1.0.1"
serde       = { version="1.0.126", features = ["derive"] }
serde_json  = "1.0.64"
hyper       = {version="0.14.9", features=["full"]}
smallvec    = "1.6.1"
hyper-tls   = { version = "0.5" }
chrono      = "0.4"
websocket = "0.26.2"
url         = "2.2.2"