[package]
name = "tinkoff_investments"
version = "2.0.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tonic = {version = "0.6.2", features = ["transport", "tls-roots"]}
prost = "0.9.0"
prost-types = "0.9.0" # Contains definitions of Protocol Buffers well-known types

[build-dependencies]
tonic-build = "0.6.2"
